--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,4 +1,4 @@
-name: Auto-grading
+name: Auto-grading (Simplified Upstream Fetch, Unified Tests, No legacy tests/)
 
 on:
   push:
@@ -20,81 +20,34 @@ jobs:
       with:
         python-version: '3.10'
     
-    - name: Pull updates from upstream (read-only)
+    - name: Fetch latest tests and workflow from upstream (read-only)
       run: |
-        # IMPORTANT: This workflow only pulls from upstream and does not push any changes back to it
-        
-        # Configure git to allow merging unrelated histories
-        git config --global pull.rebase false
-        
-        # Set git user identity
+        # Configure git user identity
         git config --global user.name "GitHub Actions Bot"
         git config --global user.email "actions@github.com"
         
-        # Hardcoded upstream repository URL (using HTTPS instead of SSH)
-        # Using a read-only URL to prevent accidental pushes
-        UPSTREAM_URL="https://github.com/UCSF-DataSci/ucsf-datasci-223-25-winter-test-0-datasci223_assignment1.git"
-        echo "Setting upstream to: $UPSTREAM_URL (read-only)"
+        # Add upstream remote if not exists
+        if ! git remote | grep -q upstream; then
+          git remote add upstream https://github.com/UCSF-DataSci/ucsf-datasci-223-25-winter-test-0-datasci223_assignment1.git
+        fi
         
-        # Add the upstream repository as a read-only remote
-        git remote add upstream $UPSTREAM_URL
-        
-        # Fetch the latest changes from upstream (read-only)
+        # Fetch upstream without merging
         git fetch upstream
         
-        # Create a temporary branch for the merge
-        git checkout -b temp-merge-branch
+        # Overwrite local .github/tests and workflow files with upstream versions
+        git checkout upstream/main -- .github/tests/ .github/workflows/classroom.yml || true
         
-        # Try to merge the upstream changes
-        if git merge upstream/main --allow-unrelated-histories; then
-          echo "Merge successful"
-        else
-          echo "Merge had conflicts, resolving them"
-          
-          # Resolve conflicts in classroom.yml if it exists
-          if [ -f ".github/workflows/classroom.yml" ]; then
-            echo "Resolving conflicts in classroom.yml"
-            git checkout --theirs .github/workflows/classroom.yml
-            git add .github/workflows/classroom.yml
-          fi
-          
-          # Resolve conflicts in tests directory if it exists
-          if [ -d "tests/" ]; then
-            echo "Resolving conflicts in tests directory"
-            git checkout --theirs tests/
-            git add tests/
-          fi
-          
-          # Complete the merge
-          git commit -m "Merge updates from upstream template"
-        fi
-        
-        # Switch back to the original branch
-        git checkout main
-        
-        # Apply the changes from the temporary branch
-        git merge temp-merge-branch --allow-unrelated-histories
-        
-        # Clean up
-        git branch -D temp-merge-branch
-        
-        # Remove the upstream remote to prevent accidental pushes
-        git remote remove upstream
-        
-        # Verify that the upstream remote is gone
-        if git remote | grep -q upstream; then
-          echo "ERROR: Failed to remove upstream remote"
-          exit 1
-        fi
+        # Optionally, remove upstream remote to avoid confusion
+        git remote remove upstream || true
     
-    - name: Install dependencies
+    - name: Install test dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
+        pip install -r .github/tests/requirements.txt
     
     - name: Run tests
       run: |
-        pytest tests/test_email_hasher.py -v
+        pytest .github/tests/test_assignment.py -v
     
     - name: Check for README.md
       run: |
@@ -105,4 +58,4 @@ jobs:
         
         if ! grep -q "http" README.md; then
           echo "WARNING: README.md might be missing a link to music recommendation"
-        fi 
+        fi
